[gd_scene load_steps=84 format=3 uid="uid://vjyrgs838jdh"]

[ext_resource type="Script" path="res://Scripts/player_office.gd" id="1_tn4dh"]
[ext_resource type="Texture2D" uid="uid://q2r1qfhv0h7l" path="res://Assets/prototype_attack_sheet.png" id="2_q3tko"]
[ext_resource type="Texture2D" uid="uid://yj31vfperak4" path="res://Assets/prototype_dash_sheet.png" id="3_fr6qy"]
[ext_resource type="Texture2D" uid="uid://dkyfsauw2tx26" path="res://Assets/prototype_hurt_sheet.png" id="4_n7bwq"]
[ext_resource type="Texture2D" uid="uid://dy8g130b2csr3" path="res://Assets/albert_idle_sheet.png" id="5_u2dgg"]
[ext_resource type="Texture2D" uid="uid://cnopfsb52hk2p" path="res://Assets/albert_walk_sheet.png" id="6_6l4ea"]
[ext_resource type="AudioStream" uid="uid://8ivh0r6qhvki" path="res://Sounds/walk sound.mp3" id="6_v2lr5"]
[ext_resource type="AudioStream" uid="uid://cv63jtajxpqh" path="res://Sounds/run sound.mp3" id="7_qapif"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vhgr1"]
atlas = ExtResource("2_q3tko")
region = Rect2(0, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymhrk"]
atlas = ExtResource("2_q3tko")
region = Rect2(322, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2uh4"]
atlas = ExtResource("2_q3tko")
region = Rect2(644, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_65sio"]
atlas = ExtResource("2_q3tko")
region = Rect2(0, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvf8h"]
atlas = ExtResource("2_q3tko")
region = Rect2(322, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sl6x"]
atlas = ExtResource("2_q3tko")
region = Rect2(644, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cmm4"]
atlas = ExtResource("3_fr6qy")
region = Rect2(0, 0, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpwja"]
atlas = ExtResource("3_fr6qy")
region = Rect2(394, 0, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_pokhl"]
atlas = ExtResource("3_fr6qy")
region = Rect2(788, 0, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_goytg"]
atlas = ExtResource("3_fr6qy")
region = Rect2(0, 501, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymwtb"]
atlas = ExtResource("3_fr6qy")
region = Rect2(394, 501, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7pnh"]
atlas = ExtResource("3_fr6qy")
region = Rect2(788, 501, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_3npr3"]
atlas = ExtResource("3_fr6qy")
region = Rect2(0, 1002, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d4x8"]
atlas = ExtResource("3_fr6qy")
region = Rect2(394, 1002, 394, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cpr6"]
atlas = ExtResource("2_q3tko")
region = Rect2(0, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1jbl"]
atlas = ExtResource("2_q3tko")
region = Rect2(322, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxl8b"]
atlas = ExtResource("2_q3tko")
region = Rect2(644, 0, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhals"]
atlas = ExtResource("2_q3tko")
region = Rect2(0, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogcej"]
atlas = ExtResource("2_q3tko")
region = Rect2(322, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0b65"]
atlas = ExtResource("2_q3tko")
region = Rect2(644, 501, 322, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5jtt"]
atlas = ExtResource("4_n7bwq")
region = Rect2(0, 0, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_jju4f"]
atlas = ExtResource("4_n7bwq")
region = Rect2(317, 0, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa8mt"]
atlas = ExtResource("4_n7bwq")
region = Rect2(634, 0, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4xs4"]
atlas = ExtResource("4_n7bwq")
region = Rect2(0, 501, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktknv"]
atlas = ExtResource("4_n7bwq")
region = Rect2(317, 501, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_22sjy"]
atlas = ExtResource("4_n7bwq")
region = Rect2(634, 501, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_e407f"]
atlas = ExtResource("4_n7bwq")
region = Rect2(0, 1002, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2u24"]
atlas = ExtResource("4_n7bwq")
region = Rect2(317, 1002, 317, 501)

[sub_resource type="AtlasTexture" id="AtlasTexture_exk7k"]
atlas = ExtResource("5_u2dgg")
region = Rect2(0, 0, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxn1d"]
atlas = ExtResource("5_u2dgg")
region = Rect2(389, 0, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugdnn"]
atlas = ExtResource("5_u2dgg")
region = Rect2(778, 0, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygcvx"]
atlas = ExtResource("5_u2dgg")
region = Rect2(1167, 0, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_24kl2"]
atlas = ExtResource("5_u2dgg")
region = Rect2(0, 568, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2kr1"]
atlas = ExtResource("5_u2dgg")
region = Rect2(389, 568, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbugo"]
atlas = ExtResource("5_u2dgg")
region = Rect2(778, 568, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_onycc"]
atlas = ExtResource("5_u2dgg")
region = Rect2(1167, 568, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_og2sr"]
atlas = ExtResource("5_u2dgg")
region = Rect2(0, 1136, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ry22"]
atlas = ExtResource("5_u2dgg")
region = Rect2(389, 1136, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g85e"]
atlas = ExtResource("5_u2dgg")
region = Rect2(778, 1136, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tqpy"]
atlas = ExtResource("5_u2dgg")
region = Rect2(1167, 1136, 389, 568)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssc53"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh88k"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iyln"]
atlas = ExtResource("6_6l4ea")
region = Rect2(874, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d4av"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n4rm"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dyj4"]
atlas = ExtResource("6_6l4ea")
region = Rect2(874, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_55td6"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 1146, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i7ci"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 1146, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_amnwa"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_24awt"]
atlas = ExtResource("6_6l4ea")
region = Rect2(454, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xobm"]
atlas = ExtResource("6_6l4ea")
region = Rect2(908, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbs21"]
atlas = ExtResource("6_6l4ea")
region = Rect2(1362, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_8036j"]
atlas = ExtResource("6_6l4ea")
region = Rect2(1816, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_4axl6"]
atlas = ExtResource("6_6l4ea")
region = Rect2(2270, 0, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_76dxb"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_di7j1"]
atlas = ExtResource("6_6l4ea")
region = Rect2(454, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs4us"]
atlas = ExtResource("6_6l4ea")
region = Rect2(908, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_awp4r"]
atlas = ExtResource("6_6l4ea")
region = Rect2(1362, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_jac8x"]
atlas = ExtResource("6_6l4ea")
region = Rect2(1816, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3d3m"]
atlas = ExtResource("6_6l4ea")
region = Rect2(2270, 573, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_aumji"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 1146, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwrah"]
atlas = ExtResource("6_6l4ea")
region = Rect2(454, 1146, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_v56gm"]
atlas = ExtResource("6_6l4ea")
region = Rect2(908, 1146, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_261da"]
atlas = ExtResource("6_6l4ea")
region = Rect2(1362, 1146, 454, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbhjp"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ml1c"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgbq3"]
atlas = ExtResource("6_6l4ea")
region = Rect2(874, 0, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_22yij"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfl6f"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_61sc6"]
atlas = ExtResource("6_6l4ea")
region = Rect2(874, 573, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gffb"]
atlas = ExtResource("6_6l4ea")
region = Rect2(0, 1146, 437, 573)

[sub_resource type="AtlasTexture" id="AtlasTexture_baxdj"]
atlas = ExtResource("6_6l4ea")
region = Rect2(437, 1146, 437, 573)

[sub_resource type="SpriteFrames" id="SpriteFrames_wm30t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhgr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymhrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2uh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65sio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvf8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sl6x")
}],
"loop": false,
"name": &"air_attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cmm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpwja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pokhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goytg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymwtb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7pnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3npr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d4x8")
}],
"loop": true,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cpr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1jbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxl8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhals")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogcej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0b65")
}],
"loop": false,
"name": &"heavy_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5jtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jju4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa8mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4xs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktknv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22sjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e407f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2u24")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exk7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxn1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugdnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygcvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24kl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2kr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbugo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onycc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og2sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ry22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g85e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tqpy")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssc53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh88k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iyln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d4av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n4rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dyj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55td6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i7ci")
}],
"loop": true,
"name": &"run",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amnwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24awt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xobm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbs21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8036j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4axl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76dxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di7j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs4us")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awp4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jac8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3d3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aumji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwrah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v56gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_261da")
}],
"loop": true,
"name": &"single_attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbhjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ml1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgbq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_22yij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfl6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61sc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gffb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baxdj")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qiiw8"]
radius = 151.0
height = 426.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h046s"]
radius = 9.24479
height = 27.8933

[node name="PlayerOffice" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_tn4dh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wm30t")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qiiw8")

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
scale = Vector2(14.7692, 15.8461)
shape = SubResource("CapsuleShape2D_h046s")

[node name="WalkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_v2lr5")
volume_db = 5.0

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qapif")
volume_db = 5.0
